--- a/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
@@ -1,5 +1,2 @@
-﻿<div class="contenido">
-    <label class="titulo">Crear Documento</label>       
-
-    <div ui-view></div>
-</div>
+﻿    <p>{{ vm.paso }}</p>
+    <div ui-view class="view_gestion_documental"></div>
