--- a/WebLegemClient/src/css/estilos_weblegem.css
+++ b/WebLegemClient/src/css/estilos_weblegem.css
@@ -3,6 +3,7 @@
 .a_boton{
     background-color: #45b15d;
     padding: 0.6em 2em;
+    font-family:'Century Gothic';
 	font-size: 0.8em;
 	font-weight: 600;
 	text-transform: uppercase;
@@ -11,48 +12,21 @@
 	border:none;
     border-radius:0.2em;
 
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
-
-    -webkit-box-shadow: 0.05em 0.05em 0.4em 0 rgba(0, 0, 0, 0.40);
-    -moz-box-shadow: 0.05em 0.05em 0.4em 0 rgba(0, 0, 0, 0.40);
-    box-shadow: 0.05em 0.05em 0.4em 0 rgba(0, 0, 0, 0.40);
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	transition: all 0.2s;
 }
 
 .a_boton:hover {
-
- background-image: -moz-linear-gradient(top, rgba(88, 211, 98, 0.93), #3f9f43);
+    background-color:  #3d9851;
 }
-
 
 .a_boton:active{
-    background: #636262;
+    background-color: #3d9851;
+    -webkit-box-shadow: inset 0 0 1px 3px #2f753f;
+    -moz-box-shadow: inset 0 0 1px 3px #2f753f;
+    box-shadow: inset 0 0 1px 3px #2f753f;
 }
-
-/*estilo general para inputs*/
-/*----------------------------------------*/
-.a_input{
-    width:auto;
-    margin-bottom: 2em;
-    line-height: 2.5em;
-    padding: 0 1em;
-    transition:        box-shadow 0.4s;
-    -webkit-transition:box-shadow 0.4s;
-    -moz-transition:   box-shadow 0.4s;
-    box-shadow: 1px 0 #3f9f43 inset;
-}
-
-.a_input:focus{
-    border:2px solid  #3f9f43;
-    box-shadow: 40em 0 white inset;
-}
-
-.a_input:focus::-moz-placeholder{
-    color: #3f9f43;
-    font-weight:bold;
-}
-
 
 /*estilo general para thumbnail*/
 /*----------------------------------------*/
@@ -90,27 +64,16 @@
     text-align:center;
     height:auto;
     background:  #37404A;
-    border-radius:0.5em 0.5em 0 0;
+    border-radius:4px 4px 0 0;
     display:block;
-    padding:1em;
+    padding:0.5em;
     font-family:sans-serif;
     font-size:1.1em;
     font-weight:600;
+    overflow: hidden;
 }
 
-.subtitulo {
-    background:#fff;
-    overflow: auto;
-}
 
-.subtitulo >p{
-    font-family:sans-serif;
-    font-size:2em;
-    font-weight:600;
-    text-align:center;
-    color: #37404A;
-    padding:0.5em 0 0 0 ;
-}
 
 
 /*Disposiciones en display/
@@ -124,119 +87,19 @@
 .a_inline{
     display:inline;
 }
-
-/*controles accesibilidad*/
-
-.a_botona[type=checkbox]{
-    display:none;
-}
-
-.a_botona[type=checkbox] + .labelcheck{
-    cursor:pointer;
-}
-
-.labelcheck{
-    font-family:'Century Gothic';
-    font-size:1.5em;
-}
-
-.labelcheck:before{
-    content:'';
-    background:transparent;
-    border: 4px solid #123423;
-    border-radius:25px;
-    display:inline-block;
-    height:95px;
-    margin-right:20px;
-    text-align:center;
-    vertical-align:middle;
-    width:95px;
-}
-
-.a_botona[type=checkbox]:checked + label:before
-{
-    content:'d';
-    font-size:85px;
-    color:aqua;
-}
-
-
-.a_botonab {
-    display:inline;
-    height:40px;
-    width:40px;
-    background:white;
-    background: url("../recursos/battery status.png")no-repeat;
-    background-size: 100% 100%;
-}
-
-/*-------------*/
-.labe{
-    cursor:pointer;
-    line-height:0;
-    background:#0C8686;
-    margin:0 0;
-    vertical-align:middle;
-    text-align:center;
-}
-
-
-.labe + span{
-    vertical-align:middle;
-    text-align:center;
-}
-
-.inpu[type="checkbox"]{
-    display:none;
-}
-
-    .inpu[type="checkbox"] + span:before {
-        content:"";
-        background-image: url('recursos/botones/jv.png');
-    }
-
-    .inpu[type="checkbox"]:checked + span:before {
-        content: url('../recursos/botones/path4.png');
-    }
-
 /*cuerpo del cocumento*/
 .cuerpo{
     margin-top:20px;
 }
 
 /*-------------------*/
-/*form de Busqueda*/
 
-
-
-.a_search{
-    position:relative;
-    width: 200px;
-	height:34px;
-    background: #37404A;
-    border-radius: 2px;
-    -webkit-box-shadow: -0.1em 0.2em 0.4em  #123423;
-    -moz-box-shadow: -0.1em 0.2em 0.4em  #123423;
-    box-shadow: -0.1em 0.2em 0.4em  #123423;
+/*menesajes de validacion*/
+.a_validacion{
+    color: orangered;
+    font-family:'Century Gothic';
+    font-size:small;
 }
-
-.a_search input{
-    position:absolute;
-    width:70%;
-    left:10px;
-    top:4px;
-    padding: 4.5px;
-    border: 1px groove black ;
-    background: #fff;
-    border-radius: 3px 0 0 3px;
-}
-
-.a_search #lupa {
-    position: absolute;
-    top:6px;
-    right:10px;
-    cursor: pointer;
-}  
 
  
 /* .a_search #lupa:before { flecha 
@@ -252,6 +115,7 @@
 /*TEXTO PARA LOS LABELS*/
 .texto_labels{
     display:block;
+    color:#21262c;
     font-size:1em;
     font-family:'Franklin Gothic';
 }
