--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -1,47 +1,62 @@
 ﻿<div class="contenido">
     <label class="titulo">Tipo de Documento</label>
     <div>
-        <div style="margin: 0 25%; ">
-        <form class="form_tipo_documento">
-            <label class="texto_labels">Nombre del tipo documento</label>
-            <input class="a_input" id="input1" type="text" ng-model="vm.tipoDoc.nombre" required placeholder="Ingrese nombre" />
-                <div style="display:block; text-align:right;">
-                    <button class="a_boton btn_con_ico" type="button" ng-show="!vm.editando" ng-click="vm.create()">
-                        <img src="recursos/iconos_png/ico_agregar.png" />
+        <div>
+            <form class="form_administracion">
+                <label class="texto_labels">Nombre del tipo documento</label>
+                <input class="a_input input_administracion" type="text" ng-model="vm.tipoDoc.nombre" required placeholder="Ingrese nombre" />
+                <div style="display:inline;padding: 0 0 0 10px;">
+                    <button class="btn_con_ico " type="button" ng-show="!vm.editando" ng-click="vm.create()">
+                        <span class="ico-plus tamano_botones_1"></span>
                         Añadir
                     </button>
-                    <button class="a_boton btn_con_ico" type="button" ng-show="vm.editando" ng-click="vm.guardar()">
-                        <img src="recursos/iconos_png/ico_guardar.png" />
+                    <button class="btn_con_ico" type="button" ng-show="vm.editando" ng-click="vm.guardar()">
+                        <span class="ico-floppy-o tamano_botones_1"></span>
                         Guardar
                     </button>
-                    <button class="a_boton btn_con_ico" type="button" ng-click="vm.cancelar()">
-                        <img src="recursos/iconos_png/ico_cancelar.png" />
+                    <button class="btn_con_ico" type="button" ng-click="vm.cancelar()">
+                        <span class="ico-times tamano_botones_1"></span>
                         Cancelar
                     </button>
                 </div>
-        </form>
+            </form>
         </div>
-            <div style="display:block;">
-                <div style="margin: 0 25%; ">
-                    <br /><br />
-                    <label class="texto_labels">Lista de tipos de documentos</label>
+        <div style="display:block;">
+            <div>
+                <label class="texto_labels">Lista de tipos de documentos</label>
 
-                    <select size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposDoc | orderBy: 'nombre'" ng-model="vm.tipoDocSeleccionado"></select>
+                <!--<select size="3" class="select_td_te" ng-disabled="vm.editando" 
+                        ng-options="tipo as tipo.nombre for tipo in vm.tiposDoc | orderBy: 'nombre'" 
+                        ng-model="vm.tipoDocSeleccionado"></select>-->
 
-                    <div style="display:block; text-align:right;">
-                        <button class="a_boton btn_con_ico" id="td_remover" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
-                            Remover
-                        </button>
-                        <button class="a_boton btn_con_ico" id="td_editar" ng-disabled="vm.editando" type="button" ng-click="vm.editar()">
-                            <img src="recursos/iconos_png/ico_editar.png" />Editar
-                        </button>
-                    </div>
+                <ul class="a_listado">
+
+                    <li ng-repeat="tipo in vm.tiposDoc">
+                        <input type="radio" name="entidad_rad" class="styled" id="{{tipo.id}}"
+                            ng-value="tipo"
+                            ng-click="vm.listadoTipoDocumento(tipo)" ng-disabled="vm.editando" />
+                        <label class="styled" for="{{tipo.id}}">{{ tipo.nombre }}</label>
+                    </li>                    
+                    <!-- <li>
+                        <input type="radio" name="radio_name" class="styled" id="b_f" ng-click="vm.listadoTipoDocumento('b_f')">
+                        <label class=" styled" for="b_f">item 1</label>
+                    </li> -->
+                </ul>
+
+                <div style="width:50%; margin-top:10px; float:right;">
+                   
+                    <button id="remover_td" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
+                        <span class="ico-trash tamano_botones_1"></span>Remover
+                    </button>
+                    <button id="editar_td" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.editar()">
+                        <span class="ico-pencil tamano_botones_1"></span>
+                        Editar
+                    </button>
+                        
                 </div>
-                </div>
+                <div style="clear:both;"></div>
             </div>
-        
-            
-        </object>
-
+        </div>
     </div>
+
 </div>
