--- a/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
@@ -1,9 +1,16 @@
-﻿<form>
-    <label class="texto_labels"  for="asunto">Asunto</label>
-    
-    <textarea class="text_area_asunto" rows="4" cols="50" ng-model="vm.documento.asunto"></textarea>
+﻿<div class="contenido animatio ng-enter" id="holas">
+    <label class="titulo">Crear Documento</label>
+    <div>
+        <form>
+            <label class="texto_labels" for="asunto">Asunto</label>
+            <hr />
+            <textarea class="text_area" rows="4" cols="50" ng-model="vm.documento.asunto"></textarea>
 
-    <!--<button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.pergunta-anotacion">Siguiente</button>-->
-    <button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.resultado-ocr">Siguiente</button>
-    
-</form>
+            <!--<button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.pergunta-anotacion">Siguiente</button>-->
+            <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.resultado-ocr">
+                Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+            </button>
+
+        </form>
+    </div>
+</div>
