--- a/WebLegemClient/src/app/noticias/noticias.tmpl.html
+++ b/WebLegemClient/src/app/noticias/noticias.tmpl.html
@@ -1,15 +1,50 @@
 ﻿<div class="contenido_noticias">
-    <label class="titulo">Noticias Universidad De Nariño </label>
+
+    
+    <label class="titulo_news">Noticias Universidad De Nariño </label>
+    <hr class="divisor_news"/>
+
+    <div class="principales_news">
+        <div class="col1">
+
+        </div>
+
+        <div class="col2">
+            <div class="col2_1"></div>
+            <div class="col2_1"></div>
+            <div class="col2_1"></div>
+        </div>
+    </div>
+
+
+    <label class="titulo_news">Actualidad Documental </label>
+    <hr class="divisor_news" />
+
+    <div class="documentos_news">
+        <div class="post_documentos"></div>
+        <div class="post_documentos"></div>
+        <div class="post_documentos"></div>
+        <div class="post_documentos"></div>
+        <div class="post_documentos"></div>
+        <div class="post_documentos"></div>
+        <div class="post_documentos"></div>
+        <div class="post_documentos"></div>
+    </div>
+
+
+    <div class="documentos_news"></div>
+
+
         <main class=" masonry notice">
 
-            <article class="post">
+            <article class="noticia">
                 <h2>Investic abre convocatorias </h2>
                 <img src="recursos/inves.png" />
                 <p>La Vice rectoría de Investigaciones Postgrados y Relaciones Internacionales de la Universidad de Nariño abrió  convocatoria para vincular a 78 profesionales</p>
                 <label>Ver más</label>
             </article>
 
-            <article class="post">
+            <article class="noticia">
                 <h2>Reestructuración de la modalidad virtual</h2>
                 <img src="recursos/images (2).jpg" />
                 <p>Solarte Portilla Rector de la Universidad manifiesta que la reestructuración de la modalidad virtual no afecta a los estudiantes </p>
@@ -17,42 +52,42 @@
             </article>
 
 
-            <article class="post">
+            <article class="noticia">
                 <h2>Circular No. 030 Oficina de Control Interno </h2>
                 <img src="recursos/images.jpg" />
                 <p>Liquidación Oportuna de Convenios y Contratos Interadministrativos... </p>
                 <label>Ver más</label>
             </article>
 
-            <article class="post">
+            <article class="noticia">
                 <h2>Reestructuración de la modalidad virtual </h2>
                 <img class="imgs" src="recursos/martillolibro.jpg" />
                 <p>Solarte Portilla Rector de la Universidad manifiesta que la reestructuración de la modalidad virtual no afecta a los estudiantes </p>
                 <label>Ver más</label>
             </article>
 
-            <article class="post">
+            <article class="noticia">
                 <h2> Circular No. 034 Oficina de Control Interno</h2>
                 <img src="recursos/not3.jpg" />
                 <p>Restricción en el manejo de las hojas de vida e historias clínicas de funcionarios y estudiante...</p>
                 <label>Ver más</label>
             </article>
 
-            <article class="post">
+            <article class="noticia">
                 <h2>Acuerdo No. 035 de Octubre 24 de 2012 del Consejo Editorial</h2>
                 <img class="imgs" src="recursos/reforma.jpg" />
                 <p>Por medio del cual se modifica el Acuerdo 002 de octubre 20 de 2005 que reglamenta las publicaciones no seriadas de la Universidad de Nariño</p>
                 <label>Ver más</label>
             </article>
 
-            <article class="post">
+            <article class="noticia">
                 <h2>Reforma de la Matemática Moderna en Colombia</h2>
                 <img src="recursos/notc5.jpg" />
                 <p>El Departamento de Matemáticas y Estadística a través de su ciclo de conferencias, denominado</p>
                 <label>Ver más</label>
             </article>
 
-            <article class="post">
+            <article class="noticia">
                 <h2>Instruccion de ingreso</h2>
                 <img src="recursos/reforma.jpg" />
                 <p>Instrucciones para el ingreso de personal administrativo, docente, estudiantes y visitantes a las instalaciones de la Universidad de Nariño </p>
