--- a/WebLegemClient/src/css/noticias.css
+++ b/WebLegemClient/src/css/noticias.css
@@ -1,25 +1,81 @@
-﻿.contenido_noticias{
-    width:90%;
-    margin-left:auto;
-    margin-right:auto;
-    border-radius:1em;
-    background:#fff;
+﻿.contenido_noticias {
+    width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 20px;
+    font-family: Arial, "Helvetica", sans-serif;
 
-    margin-bottom:6rem;
-
-
-    -webkit-box-shadow: 0.5em 0.5em 1em 0 rgba(0,0,0,0.75);
-    -moz-box-shadow: 0.5em 0.5em 1em 0 rgba(0,0,0,0.75);
-    box-shadow: 0.5em 0.5em 1em 0 rgba(0,0,0,0.75);
 }
 
-.masonry {
-    margin-top:10px;
+
+.divisor_news{
+    color:red;
+    border:2px solid rgb(169, 171, 174);
+    margin-bottom:10px;
+}
+
+.titulo_news{
+    color:#515c68;
+    font-size:1.5em;
+}
+
+.tablero_noticias {
     margin-left:15px;
+
+    display:flex;
+    display: -webkit-flex;
 }
 
 
-.masonry .post {
+.principales_news{
+    height:50vh;
+
+    display:flex;
+    display: -webkit-flex;
+    margin:10px 0;
+}
+
+
+.col1{
+    height:100%;
+    background:rgba(100, 137,0,1);
+    flex-grow:2;
+}
+.col2{
+    height:100%;
+    background:blue;
+    flex-grow:1;
+    -webkit-flex-direction:column;
+    flex-direction:column;
+}
+
+.col2_1{
+    background:greenyellow;
+    margin:10px;
+    height:30%;
+    flex-grow:1;
+}
+
+
+.documentos_news{
+    background:red;
+    display:flex;
+    display: -webkit-flex;
+    height:40px;
+    flex-direction:row;
+    justify-content:space-between;
+    
+    
+}
+.post_documentos{
+    margin:10px;
+    height:30px;
+    flex-grow:1;
+    background:blue;
+    
+}
+
+.masonry .noticia {
     display: inline-block;
     width: calc(100% - 50px);
     height: 400px;
@@ -27,13 +83,19 @@
     padding: 20px;
     border: none;
     background-color: white;
-    border-top: 2px solid #53bf6b;    
 }
 
 .masonry .post:hover {
     background-color:#E2FBD3;
 }
-.post > p {
+
+.noticia {
+    text-align: justify;
+    height: 60px;
+    overflow: hidden;  
+}
+
+.noticia > p {
     text-align: justify;
     height: 60px;
     overflow: hidden;  
@@ -49,7 +111,7 @@
     color:greenyellow;
     
 } 
-    .masonry .post iframe{        
+    .masonry .noticia iframe{        
     max-width: 100%;  
     max-height:unset;
     display: block;   
@@ -58,7 +120,7 @@
     }
 
 
-.masonry .post img {
+.masonry .noticia img {
     height:50%;
     max-width: 100%;  
     max-height:unset;
