modificacion html tipo_entidad + css

--- a/WebLegemClient/src/app/noticias/noticias.tmpl.html
+++ b/WebLegemClient/src/app/noticias/noticias.tmpl.html
@@ -4,7 +4,7 @@
     <label class="titulo_news">Noticias Universidad De Nariño </label>
     <hr class="divisor_news"/>
 
-    <div class="principales_news">
+    <!--<div class="principales_news">
         <div class="col1">
 
         </div>
@@ -31,9 +31,9 @@
         <div class="post_documentos"></div>
     </div>
 
-
     <div class="documentos_news"></div>
-
+        
+        -->
 
         <main class=" masonry notice">
 
