--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -1,58 +1,62 @@
 ﻿<div class="contenido">
     <label class="titulo">Tipo de Entidad</label>
-    <div>
-        <div>
-            <form class="form_administracion">
-                <label class="texto_labels">Nombre de entidad</label>
-                <input class="a_input input_administracion" type="text" ng-model="vm.tipoEntidad.nombre" placeholder="Ingrese el nombre Entidad" />
-                <!--<div style="display:inline-block; width:40%;">
-                    <label class="texto_labels">tipo de entidad</label>
-                    <input class="a_input" style="width:80%;" type="text" ng-model="vm.tipoEntidad.tipo" placeholder="Ingrese el tipo de entidad" />
-                </div>-->
-                <div style="display:inline;padding: 0 0 0 10px;">
-                    <button class="btn_con_ico" type="button" style="display:inline-block;" ng-if="!vm.editando" ng-click="vm.create()">
-                        <span class="ico-plus tamano_botones_1"></span>Añadir
-                    </button>
-                    <button class="btn_con_ico" type="button" style="display:inline-block;" ng-if="vm.editando" ng-click="vm.guardar()">
-                        <span class="ico-floppy-o tamano_botones_1"></span>Guardar
-                    </button>
-                    <button class="btn_con_ico" type="button" style="display:inline-block;" ng-click=" vm.cancelar()">
-                        <span class="ico-times tamano_botones_1"></span>Cancelar
-                    </button>
-                </div>
-            </form>
+
+    <section class="layout_padre">
+        <div class="hijo_left">
+
+            <label class="texto_labels" style="margin-bottom:10px;">"Nuevo" para crear un tipo de entidad.</label>
+            <button class="btn_con_ico" ng-if="!vm.editando" ng-click="vm.create()">
+                <span class="ico-plus tamano_botones_1"></span>Nuevo
+            </button>
+
+            <label class="texto_labels" style="margin-top:10px;">Lista de tipo de entidades</label>
+            <ul class="a_listado" style="width:100%;">
+                <li ng-repeat="tipoEntidad in vm.tiposEntidad">
+                    <input type="radio" name="tipo_entidad_rad" class="styled" id="{{tipoEntidad.id}}"
+                           ng-value="tipoEntidad"
+                           ng-click="vm.listadoTipoEntidad(tipoEntidad)" />
+                    <label class="styled" for="{{tipoEntidad.id}}">{{ tipoEntidad.nombre }}</label>
+                </li>
+            </ul>
         </div>
 
-        <div style="display:block;">
+        <div class="hijo_right">
 
-            <div>
-                <label class="texto_labels">Lista de tipo de entidades</label>
-
-                <!--<select size="3" class="select_td_te" ng-disabled="vm.editando" ng-options="tipo as tipo.nombre for tipo in vm.tiposEntidad" ng-model="vm.tipoEntSeleccionada"></select>-->
-
-                <ul class="a_listado">
-                    <li ng-repeat="tipoEntidad in vm.tiposEntidad">
-                        <input type="radio" name="tipo_entidad_rad" class="styled" id="{{tipoEntidad.id}}"
-                            ng-value="tipoEntidad"
-                            ng-click="vm.listadoTipoEntidad(tipoEntidad)"/>
-                        <label class="styled" for="{{tipoEntidad.id}}">{{ tipoEntidad.nombre }}</label>
-                    </li>
-                    <!--
-                    <li>
-                        <input type="radio" name="radio_name" class="styled" id="b_1" ng-click="vm.listadoTipoEntidad('b_1')">
-                        <label class=" styled" for="b_1">item 1</label>
-                    </li>-->
-                </ul>
-
-                <div style=" width:50%; margin-top:10px; float:right;">
-                    <button id="remover_te" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
-                        <span class="ico-trash tamano_botones_1"></span>Remover
-                    </button>
-                    <button id="editar_te" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.editar()">
+            <label class="texto_labels">Nombre del tipo entidad</label>
+                <form class="form_tipo_entidad">
+                    <input class="a_input input_administracion" style="width:auto;" type="text" ng-model="vm.tipoEntidad.nombre" placeholder="Ingrese el nombre Entidad" />
+                    <button class="btn_con_ico" type="button" ng-if="!vm.editando" ng-click="vm.create()">
                         <span class="ico-pencil tamano_botones_1"></span>Editar
                     </button>
+                    <button id="remover_tes" class="btn_con_ico" ng-disabled="vm.editando" type="button" ng-click="vm.remover()">
+                        <span class="ico-trash tamano_botones_1"></span>Remover
+                    </button>
+                </form>
+            <div class="entidad_control" style="width:100%; margin-bottom:10px;">
+                <div style="background:#37404A;  height:40px; width:100%; word-spacing:-4px; padding:3px; border-top-left-radius:3px; border-top-right-radius:3px; ">
+                    <div class="iconos_control"><span class="ico-align-justify"></span></div>
+                    <div class="iconos_control"><span class="ico-th"></span></div>
+                    <div class="iconos_control"><span class="ico-plus-circle"></span></div>
                 </div>
-                <div style="clear:both;"></div>
+                <div class="panel_control">
+                    <ul class="a_bloques">
+                        <li>
+                            <input type="checkbox" name="check_name" id="b_1">
+                            <label class=" styled1 note rounded" for="b_1">item 1</label>
+                        </li>
+                    </ul>
+
+                </div>
             </div>
+
+            <div>
+                <button class="btn_con_ico" type="button" style="display:inline-block;" ng-click="vm.guardar()">
+                    <span class="ico-floppy-o tamano_botones_1"></span>Guardar
+                </button>
+                <button class="btn_con_ico" type="button" style="display:inline-block;" ng-click=" vm.cancelar()">
+                    <span class="ico-times tamano_botones_1"></span>Cancelar
+                </button>
+            </div>
+
         </div>
-    </div>
+</div>
