--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -6,19 +6,19 @@
     z-index: 9999;
 }
 
-.contenedor_login:before {
-    content: '';
-    background-image: url('../recursos/header/pexels-photo-46274 (2).jpeg');
-    background-size: cover;
-    -webkit-filter: brightness(50%);
-    filter: brightness(50%);
-    width: 100%;
-    height: 80vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -3;
-}
+    .contenedor_login:before {
+        content: '';
+        background-image: url('../../recursos/header/pexels-photo-46274 (2).jpeg');
+        background-size: cover;
+        -webkit-filter: brightness(50%);
+        filter: brightness(50%);
+        width: 100%;
+        height: 80vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -3;
+    }
 
 .subtitulo {
     background:transparent;
