--- a/WebLegemClient/src/css/plantillas/tipo_entidad.css
+++ b/WebLegemClient/src/css/plantillas/tipo_entidad.css
@@ -3,3 +3,37 @@
     visibility:hidden; 
     margin: 0 0 5px 15px; 
 }
+
+.layout_padre{
+    display:flex;
+    height:90vh;
+    width:100%;
+}
+
+.hijo_left{  
+    -ms-flex-direction:column;
+    -webkit-flex-direction:column;
+    flex-direction:column;
+    padding:10px;
+    width:30%; 
+    height:100%;
+    background:rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    
+}
+
+.hijo_right{
+    -ms-flex-direction:column;
+    -webkit-flex-direction:column;
+    flex-direction:column;
+    padding:10px 30px;
+    width:90%; 
+    height:auto;
+}
+
+.form_tipo_entidad{
+    width:100%;
+    display:block;
+}
