--- a/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
@@ -7,81 +7,33 @@
             <label class="texto_labels" for="tipo-entidad">Tipo de la entidad</label>
 
             <div class="span_select">
-                <select class="select">
-                    <option ng-repeat="tipo in vm.tiposEntidad" value="{{ tipo.id }}">
-                        {{ tipo.nombre }}
-                    </option>
-                    <option value="pedro">
-                        pedro
-                    </option>
-                    <option value="hola">
-                        hola
-                    </option>
+                <select id="tipoEntidadSelect" class="select" ng-options="tipoEntidad as tipoEntidad.nombre for tipoEntidad in vm.tiposEntidad " ng-model="vm.tipoEntidad">
                 </select>
                 <span class="span_select ico-angle-down"></span>
             </div>
 
-            <button class="btn_con_ico" type="button">
-                <span class="ico-plus tamano_botones_1"></span>Añadir
+            <button class="btn_con_ico" type="button" ng-click="vm.log(); vm.crear(vm.entidad)">
+                Añadir
             </button>
-            <button class="btn_con_ico" type="button">
+
+            <ul>
+                <li ng-repeat="entidad in vm.entidades">
+                    <span>{{entidad.nombre}}</span>
+                    <span>{{entidad.tipoEntidad.nombre}}</span>
+                    <span ng-click="vm.eliminar(entidad)">eliminar</span>
+                    <span ng-click="vm.editar(entidad)">editar</span>
+                </li>
+            </ul>
+            
+            <button class="btn_con_ico" type="button" ng-click="vm.actualizar( vm.entidad )">
+                <span class="ico-plus tamano_botones_1"></span>Actualizar
+            </button>
+            <button class="btn_con_ico" type="button" ng-click="vm.cancelar()">
                 <span class="ico-times tamano_botones_1"></span>Cancelar
             </button>
-        </form>
+        </form>              
 
-        <!--<div>
-            <select multiple size="3">
-                <option ng-repeat="entidad in vm.entidades">
-                    <p>{{ entidad.nombre }} {{ entidad.tipo.nombre }}</p>
-                </option>
-            </select>
-        </div>-->
-
-        <div class="entidad_control">
-            <div style="background:#37404A;  height:40px; width:100%; word-spacing:-4px; padding:3px; border-top-left-radius:3px; border-top-right-radius:3px; ">
-                <div class="iconos_control"><span class="ico-align-justify"></span></div>
-                <div class="iconos_control"><span class="ico-th"></span></div>
-                <div class="iconos_control"><span class="ico-plus-circle"></span></div>
-            </div>
-            <div class="panel_control">
-                <ul class="a_bloques">
-                    <li>
-                        <input type="checkbox" name="check_name" id="b_1" >
-                        <label class=" styled1 note rounded" for="b_1">item 1</label>
-                    </li>
-
-                    <li>
-                        <input type="checkbox" name="check_name" id="b_2" >
-                        <label class="note rounded" for="b_2">item 2</label>
-                    </li>
-
-                    <li>
-                        <input type="checkbox" name="check_name" id="b_3">
-                        <label class="note rounded" for="b_3">item 3</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="check_name" id="b_4">
-                        <label class="note rounded" for="b_4">item 4</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="check_name" id="b_5">
-                        <label class="note rounded" for="b_5">item 5</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="check_name" id="b_6">
-                        <label class="note rounded" for="b_6">item 6</label>
-                    </li>
-                    <li>
-                        <input type="checkbox" name="check_name" id="b_7">
-                        <label class="note rounded" for="b_7">item 7</label>
-                    </li>
-                   
-                </ul>
-
-            </div>
-        </div>
-
-        <div style=" width:50%; float:right;">
+        <div style="width:50%; float:right;">
             <button class="btn_con_ico" type="button" value="Editar" style="margin: 0 0 0 5px;">
                 <span class="ico-pencil tamano_botones_1"></span>Editar
             </button>
