--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -1,9 +1,17 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    hola mundo
-</body>
-</html>
+﻿<form>
+    <input type="text" name="palabrasABuscar" id="palabrasABuscar" ng-model="vm.palabrasABuscar" placeholder="busqueda" />
+    <input type="text" name="anioPublicacion" id="anioPublicacion" maxlength="4" ng-model="vm.anioPublicacion" placeholder="año publicacion" />
+    <input type="text" name="numero" id="numero" maxlength="10" ng-model="vm.numero" placeholder="numero" />
+    <input type="text" name="entidad-emisora" id="entidad-emisora" maxlength="50" ng-model="vm.entidadEmisora" placeholder="Entidad Emisora" />
+    <input type="text" name="tipo-documento" id="tipo-documento" ng-model="vm.tipoDocumento" placeholder="Tipo Documento" />
+    <button type="button" ng-click="vm.buscar( vm.palabrasABuscar, vm.anioPublicacion )">Buscar</button>
+</form>
+
+<p>{{vm.palabrasABuscar}}</p>
+
+<ul>
+    <li ng-repeat="documento in vm.documentosEncontrados">
+        {{documento.entidad.nombre}} {{documento.numero}} {{documento.anio_publicacion}}<br />
+        {{documento.asunto}} {{documento.tipoDocumento.nombre}}
+    </li>
+</ul>
